--- a/week2_wednesday.html
+++ b/week2_wednesday.html
@@ -1,15 +1,192 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Wednesday – Upper Body Strength</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 50px;
+      background-color: #f4f4f4;
+      transition: background-color 0.5s ease;
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 20px;
+    }
+    #exercise {
+      font-size: 2rem;
+      font-weight: bold;
+      margin: 30px 0;
+    }
+    #timer, #overall-timer {
+      font-size: 2.5rem;
+      margin: 20px 0;
+    }
+    #progress-container {
+      width: 80%;
+      background-color: #ddd;
+      border-radius: 10px;
+      margin: 20px auto;
+      height: 30px;
+      overflow: hidden;
+    }
+    #progress-bar {
+      height: 100%;
+      width: 0%;
+      background-color: #76c7c0;
+      transition: width 0.5s linear;
+    }
+    button {
+      padding: 15px 30px;
+      font-size: 1rem;
+      margin: 10px;
+      cursor: pointer;
+      border: none;
+    }
+    .start-btn {
+      background-color: #4CAF50;
+      color: white;
+    }
+    .pause-btn {
+      background-color: #FFC107;
+      color: white;
+    }
+    .next-btn {
+      background-color: #2196F3;
+      color: white;
+    }
+    .stop-btn {
+      background-color: #f44336;
+      color: white;
+    }
+  </style>
+</head>
+<body>
+  <h1>Wednesday – Upper Body Strength</h1>
+  <div id="exercise">Press Start to Begin</div>
+  <div id="timer">00:00</div>
+  <div id="progress-container">
+    <div id="progress-bar"></div>
+  </div>
+  <div id="overall-timer">Total Time Left: 00:00</div>
+  <button class="start-btn" onclick="startWorkout()">Start Workout</button>
+  <button class="pause-btn" onclick="pauseResumeWorkout()">Pause</button>
+  <button class="next-btn" onclick="skipToNextExercise()">Next</button>
+  <button class="stop-btn" onclick="stopWorkout()">Stop</button>
 
-        <!DOCTYPE html>
-        <html lang="en">
-        <head>
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Week2 - Wednesday</title>
-        </head>
-        <body>
-            <h1>Week2 - Wednesday Workout</h1>
-            <p>This is a placeholder for the Week2 Wednesday workout.</p>
-            <a href="index.html">Back to Index</a>
-        </body>
-        </html>
-        
+  <script>
+    const workoutPlan = [
+      // Warm-Up (3 mins)
+      { exercise: "Arm Circles", duration: 60, type: "active" },
+      { exercise: "Shoulder Rolls", duration: 60, type: "active" },
+      { exercise: "Wrist Stretches", duration: 60, type: "active" },
+
+      // Main Workout (4 Rounds – 10 reps each, 30 sec rest between exercises)
+      ...Array(4).fill([
+        { exercise: "Overhead Press", duration: 45, type: "active" },
+        { exercise: "Rest", duration: 30, type: "rest" },
+        { exercise: "Renegade Rows", duration: 45, type: "active" },
+        { exercise: "Rest", duration: 30, type: "rest" },
+        { exercise: "Bicep Curls", duration: 45, type: "active" },
+        { exercise: "Rest", duration: 30, type: "rest" },
+        { exercise: "Tricep Kickbacks", duration: 45, type: "active" },
+        { exercise: "Rest", duration: 30, type: "rest" },
+        { exercise: "Superman Hold", duration: 30, type: "active" },
+        { exercise: "Rest", duration: 30, type: "rest" }
+      ]).flat(),
+
+      // Cooldown (3 mins)
+      { exercise: "Arm Stretches", duration: 90, type: "active" },
+      { exercise: "Shoulder Stretches", duration: 90, type: "active" }
+    ];
+
+    let currentIndex = 0;
+    let timeLeft = 0;
+    let totalDuration = 0;
+    let overallTimeLeft = workoutPlan.reduce((sum, ex) => sum + ex.duration, 0);
+    let timerInterval = null;
+    let isPaused = false;
+
+    function startWorkout() {
+      currentIndex = 0;
+      overallTimeLeft = workoutPlan.reduce((sum, ex) => sum + ex.duration, 0);
+      nextExercise();
+    }
+
+    function stopWorkout() {
+      clearInterval(timerInterval);
+      document.getElementById("exercise").innerText = "Workout Stopped";
+      document.getElementById("timer").innerText = "00:00";
+      document.getElementById("overall-timer").innerText = "Total Time Left: 00:00";
+      document.getElementById("progress-bar").style.width = "0%";
+      document.body.style.backgroundColor = "#f4f4f4";
+      isPaused = false;
+    }
+
+    function nextExercise() {
+      if (currentIndex < workoutPlan.length) {
+        const current = workoutPlan[currentIndex];
+        document.getElementById("exercise").innerText = current.exercise;
+        timeLeft = current.duration;
+        totalDuration = current.duration;
+
+        document.body.style.backgroundColor = current.type === "active" ? "#4CAF50" : "#f44336";
+
+        updateTimer();
+        timerInterval = setInterval(updateTimer, 1000);
+      } else {
+        document.getElementById("exercise").innerText = "Workout Complete! 💪";
+        document.getElementById("timer").innerText = "00:00";
+        document.getElementById("overall-timer").innerText = "Total Time Left: 00:00";
+        document.getElementById("progress-bar").style.width = "100%";
+        alert("Great job! You finished the workout.");
+      }
+    }
+
+    function updateTimer() {
+      if (!isPaused) {
+        if (timeLeft > 0) {
+          const mins = Math.floor(timeLeft / 60);
+          const secs = timeLeft % 60;
+          document.getElementById("timer").innerText = `${String(mins).padStart(2, '0')}:${String(secs).padStart(2, '0')}`;
+
+          const overallMins = Math.floor(overallTimeLeft / 60);
+          const overallSecs = overallTimeLeft % 60;
+          document.getElementById("overall-timer").innerText = `Total Time Left: ${String(overallMins).padStart(2, '0')}:${String(overallSecs).padStart(2, '0')}`;
+
+          const progressPercent = ((totalDuration - timeLeft) / totalDuration) * 100;
+          document.getElementById("progress-bar").style.width = `${progressPercent}%`;
+
+          timeLeft--;
+          overallTimeLeft--;
+        } else {
+          clearInterval(timerInterval);
+          currentIndex++;
+          nextExercise();
+        }
+      }
+    }
+
+    function pauseResumeWorkout() {
+      isPaused = !isPaused;
+      const pauseButton = document.querySelector('.pause-btn');
+      if (isPaused) {
+        clearInterval(timerInterval);
+        pauseButton.innerText = "Resume";
+      } else {
+        pauseButton.innerText = "Pause";
+        timerInterval = setInterval(updateTimer, 1000);
+      }
+    }
+
+    function skipToNextExercise() {
+      clearInterval(timerInterval);
+      currentIndex++;
+      nextExercise();
+    }
+  </script>
+</body>
+</html>
