--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <select id="week-select" onchange="updateLinks()">
         <option value="week1">Week 1</option>
+        <option value="week1">Week 2</option>
      
     </select>
 
