--- a/index.html
+++ b/index.html
@@ -1,55 +1,119 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Workout Timer - Index</title>
+    <title>Workout Timer - Weekly Plan</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 50px; background-color: #f4f4f4; }
-        h1 { font-size: 2rem; }
-        select, button { padding: 10px 20px; font-size: 1rem; margin: 10px; cursor: pointer; }
-        .day-buttons { margin-top: 20px; }
-        .day-buttons button { display: block; width: 200px; margin: 5px auto; }
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 50px;
+            background-color: #f4f4f4;
+        }
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+        }
+        h2 {
+            font-size: 1.5rem;
+            margin-top: 10px;
+            color: #555;
+        }
+        select, button {
+            padding: 10px 20px;
+            font-size: 1rem;
+            margin: 10px;
+            cursor: pointer;
+            border: none;
+        }
+        .day-buttons button {
+            display: block;
+            width: 200px;
+            margin: 5px auto;
+        }
+        .disabled {
+            background-color: #ccc;
+            color: #777;
+            cursor: not-allowed;
+        }
+        .enabled {
+            background-color: #4CAF50;
+            color: white;
+        }
     </style>
 </head>
 <body>
 
     <h1>Workout Timer</h1>
-    <p>Select a week and then choose a day:</p>
+    <p>Select a week to view your workouts:</p>
 
     <select id="week-select" onchange="updateLinks()">
-        <option value="week1">Week 1</option>
-        <option value="week1">Week 2</option>
-     
+        <option value="week1">Week 1 (Feb 24 - Feb 28)</option>
+        <option value="week2">Week 2 (Mar 3 - Mar 7)</option>
+        <option value="week3">Week 3 (Mar 10 - Mar 14)</option>
+        <option value="week4">Week 4 (Mar 17 - Mar 21)</option>
     </select>
 
+    <h2 id="week-dates">Feb 24 - Feb 28</h2>
+
     <div class="day-buttons">
-        <button onclick="goToWorkout('monday')">Monday</button>
-        <button onclick="goToWorkout('tuesday')">Tuesday</button>
-        <button onclick="goToWorkout('wednesday')">Wednesday</button>
-        <button onclick="goToWorkout('thursday')">Thursday</button>
-        <button onclick="goToWorkout('friday')">Friday</button>
-     
+        <button id="monday-btn" onclick="goToWorkout('monday')">Monday</button>
+        <button id="tuesday-btn" onclick="goToWorkout('tuesday')">Tuesday</button>
+        <button id="wednesday-btn" onclick="goToWorkout('wednesday')">Wednesday</button>
+        <button id="thursday-btn" onclick="goToWorkout('thursday')">Thursday</button>
+        <button id="friday-btn" onclick="goToWorkout('friday')">Friday</button>
     </div>
 
     <script>
+        const weekDates = {
+            week1: { start: new Date('2025-02-24'), end: new Date('2025-02-28') },
+            week2: { start: new Date('2025-03-03'), end: new Date('2025-03-07') },
+            week3: { start: new Date('2025-03-10'), end: new Date('2025-03-14') },
+            week4: { start: new Date('2025-03-17'), end: new Date('2025-03-21') }
+        };
+
+        const dayNames = ["monday", "tuesday", "wednesday", "thursday", "friday"];
+        const today = new Date();
+
         function updateLinks() {
             const week = document.getElementById("week-select").value;
-            const buttons = document.querySelectorAll(".day-buttons button");
-            buttons.forEach(button => {
-                const day = button.textContent.toLowerCase();
-                button.setAttribute("data-link", `${week}_${day}.html`);
+            const selectedWeek = weekDates[week];
+            const weekStart = selectedWeek.start;
+            const weekEnd = selectedWeek.end;
+
+            // Update heading with actual dates
+            document.getElementById("week-dates").innerText = `${formatDate(weekStart)} - ${formatDate(weekEnd)}`;
+
+            // Enable/disable buttons based on current date
+            dayNames.forEach((day, index) => {
+                const btn = document.getElementById(`${day}-btn`);
+                const workoutDay = new Date(weekStart);
+                workoutDay.setDate(workoutDay.getDate() + index);
+
+                if (today >= workoutDay) {
+                    btn.classList.remove("disabled");
+                    btn.classList.add("enabled");
+                    btn.disabled = false;
+                } else {
+                    btn.classList.remove("enabled");
+                    btn.classList.add("disabled");
+                    btn.disabled = true;
+                }
             });
         }
 
         function goToWorkout(day) {
             const week = document.getElementById("week-select").value;
-            const link = `${week}_${day}.html`;
-            window.location.href = link;
+            window.location.href = `${week}_${day}.html`;
         }
 
-        // Initialize links on page load
+        function formatDate(date) {
+            const options = { month: 'short', day: 'numeric' };
+            return date.toLocaleDateString('en-US', options);
+        }
+
+        // Initialize on page load
         window.onload = updateLinks;
     </script>
 
